# willow1-mod-manager

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  __main__.py  create_zip_release.py  create_zip_release.toml  unrealsdk.env  unrealsdk.toml
input_base/: __init__.py  hooks.py
mods_base/: mod.py  mod_list.py
scripts/: create_zip_release.py  post_create_zip_release.py  post_create_zip_release.toml.template
src/: __main__.py
src/input_base/: __init__.py  _input_base.cpp  _input_base.pyi  core_input.py  hooks.py
src/keybinds/: __init__.py  keybinds.cpp  keybinds.pyi  raw_keybinds.py
src/ui_utils/: chat.py  hud_message.py  option_box.py  training_box.py
